# scandirx

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: list_files.py
scandirx/: __init__.py  scandirx.c  scandirx.py
tests/: test_scandirx.py
