[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scandirx"
version = "0.1.0"
authors = [
    {name = "Pedram Parsa", email = "titangmz@gmail.com"}
]
description = "A fast, recursive directory scanner using a C extension."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/titangmz/scandirx"
Repository = "https://github.com/titangmz/scandirx"
