[metadata]
name = scandirx
version = 0.1.0
author = Pedram Parsa
author_email = titangmz@gmail.com
description = A fast directory walker using a C extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/titangmz/scandirx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
packages = scandirx
python_requires = >=3.6
install_requires =
    setuptools
    wheel
include_package_data = True

[options.extras_require]
testing =
    pytest

[build_ext]
# Specify additional compiler arguments if needed
# extra_compile_args = -O2

[tool:pytest]
testpaths = tests
